--- a/app/src/main/res/layout/fragment_tasbeh.xml
+++ b/app/src/main/res/layout/fragment_tasbeh.xml
@@ -1,6 +1,106 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+    <TextView
+        android:id="@+id/islamiText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:text="إسلامي"
+        android:layout_marginTop="10dp"
+        android:textSize="55sp"
+        android:fontFamily="@font/regular"
+        />
+<RelativeLayout
+    android:id="@+id/relative"
+    android:layout_width="wrap_content"
 
+    android:layout_height="wrap_content"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/headofsebha"
+    >
+    <ImageView
+        android:id="@+id/bodyofsebha"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+
+        android:src="@drawable/body_of_sebha"
+        app:layout_constraintHeight_percent="0.3"
+
+
+        />
+
+
+</RelativeLayout>
+
+    <ImageView
+        android:id="@+id/headofsebha"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:adjustViewBounds="true"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/islamiText"
+        android:src="@drawable/head_of_sebha"
+        app:layout_constraintHeight_percent="0.1"
+        android:layout_marginLeft="20dp"
+
+        />
+    <TextView
+        android:id="@+id/tasbehtext"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/Gold"
+        app:layout_constraintTop_toBottomOf="@id/relative"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:text="@string/number_of_tasbeh"
+        android:textSize="35sp"
+        android:fontFamily="@font/regular"
+
+        />
+    <TextView
+        android:id="@+id/counter"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintWidth_percent="0.15"
+        app:layout_constraintHeight_percent="0.1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tasbehtext"
+        android:text="0"
+android:background="@color/Gold"
+        android:textSize="20sp"
+
+        android:layout_marginTop="20dp"
+        android:textColor="@color/white"
+
+        />
+    <TextView
+        android:id="@+id/azkar"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@color/Gold"
+        android:textAlignment="center"
+        android:backgroundTint="@color/Gold"
+        app:layout_constraintWidth_percent="0.4"
+        app:layout_constraintHeight_percent="0.1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/counter"
+        tools:text="سبحان الله"
+        android:textSize="20sp"
+        android:textColor="@color/white"
+        android:layout_marginTop="20dp"
+
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
