--- a/app/src/main/res/layout/fragment_tasbeh.xml
+++ b/app/src/main/res/layout/fragment_tasbeh.xml
@@ -3,7 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/mainbackground"
+    >
     <TextView
         android:id="@+id/islamiText"
         android:layout_width="wrap_content"
@@ -30,6 +32,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
+
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
 
@@ -60,10 +63,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/Gold"
+        android:textColor="@color/black"
         app:layout_constraintTop_toBottomOf="@id/relative"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:text="@string/number_of_tasbeh"
+
         android:textSize="35sp"
         android:fontFamily="@font/regular"
 
@@ -72,17 +77,20 @@
         android:id="@+id/counter"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:gravity="center_horizontal|center_vertical"
         app:layout_constraintWidth_percent="0.15"
         app:layout_constraintHeight_percent="0.1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tasbehtext"
         android:text="0"
+        android:textAlignment="center"
+
 android:background="@color/Gold"
-        android:textSize="20sp"
+        android:textSize="30sp"
 
         android:layout_marginTop="20dp"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
 
         />
     <TextView
@@ -91,6 +99,8 @@ android:background="@color/Gold"
         android:layout_height="0dp"
         android:background="@color/Gold"
         android:textAlignment="center"
+        android:fontFamily="@font/regular"
+        android:gravity="center_horizontal|center_vertical"
         android:backgroundTint="@color/Gold"
         app:layout_constraintWidth_percent="0.4"
         app:layout_constraintHeight_percent="0.1"
