--- a/app/src/main/res/layout/fragment_radio.xml
+++ b/app/src/main/res/layout/fragment_radio.xml
@@ -18,6 +18,7 @@
         android:fontFamily="@font/regular"
         />
 <ImageView
+    android:id="@+id/radio_icon"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
 android:src="@drawable/radiopic"
@@ -25,4 +26,60 @@ android:src="@drawable/radiopic"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     android:layout_marginTop="60dp"/>
+    <TextView
+        android:id="@+id/chanel_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:textSize="30sp"
+        android:textColor="@color/black"
+        android:fontFamily="@font/regular"
+        app:layout_constraintTop_toBottomOf="@id/radio_icon"
+        android:text="أسم القناة"/>
+    <ProgressBar
+        android:id="@+id/progressbar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@id/media_layout"
+        android:indeterminateTint="@color/Gold"
+        app:layout_constraintStart_toStartOf="@id/media_layout"
+        app:layout_constraintEnd_toEndOf="@id/media_layout"
+        app:layout_constraintBottom_toBottomOf="@id/media_layout"/>
+    <LinearLayout
+        android:layout_marginTop="15dp"
+        android:weightSum="3"
+        android:id="@+id/media_layout"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+         app:layout_constraintTop_toBottomOf="@id/chanel_name">
+        <ImageView
+            android:layout_weight="1"
+            android:id="@+id/backbtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/back_icon"
+            android:adjustViewBounds="true"
+
+            />
+        <ImageView
+            android:layout_weight="1"
+            android:id="@+id/startbtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/play_icon"
+            android:adjustViewBounds="true"
+            />
+        <ImageView
+            android:layout_weight="1"
+            android:id="@+id/forwardbtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/forward_icon"
+            android:adjustViewBounds="true"
+            />
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
